WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304217
Speculative build fix for some configurations
https://bugs.webkit.org/show_bug.cgi?id=304217
Summary
Speculative build fix for some configurations
Mike Wyrzykowski
Reported
2025-12-15 16:07:17 PST
Speculative build fix for some configurations
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2025-12-15 16:07:38 PST
rdar://166571544
Mike Wyrzykowski
Comment 2
2025-12-15 16:10:42 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55438
EWS
Comment 3
2025-12-15 17:18:44 PST
Committed
304484@main
(dfea1c8a50c4): <
https://commits.webkit.org/304484@main
> Reviewed commits have been landed. Closing PR #55438 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug