Speculative build fix for some configurations https://bugs.webkit.org/show_bug.cgi?id=304217 rdar://166571544

Unreviewed, add missing include and conditional checks.

* Source/WebCore/Modules/Model/ModelDDInlineConverters.h:

Canonical link: https://commits.webkit.org/304484@main