Source/WebCore/Modules/Model/ModelDDInlineConverters.h
@@ -25,7 +25,7 @@
 
 #pragma once
 
-#if ENABLE(WEBGPU_SWIFT)
+#if ENABLE(WEBGPU_SWIFT) && ENABLE(GPU_PROCESS_MODEL)
 
 #include <ImageIO/CGImageSource.h>
 #include <WebCore/DDImageAsset.h>
